# CCADMACL_PROJECT_COM222

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
ccadmacl_project_com222/: README.md
ccadmacl_project_com222/model/: kmeans_model.joblib
ccadmacl_project_com222/scaler/: scaler.joblib
ccadmacl_project_com222/src/: _1_data_preprocessing.py  _2_model.py  _3_train_model.py  _4_evaluate_model.py  __init__.py  app.py  pipeline.py
ccadmacl_project_com222/src/utils/: fetch_data.py
notebooks/: ULCD.ipynb  sample.ipynb
utils/: fetch_data.py
