[tool.poetry]
name = "ccadmacl-project-com222"
version = "0.1.0"
description = ""
authors = ["rajkyutiebaby <rodneyestrada2425@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
kaggle = "^1.6.17"
seaborn = "^0.13.2"
optuna = "^4.1.0"
hyperopt = "^0.2.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
